--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,77 +1,74 @@
 <resources>
     <string name="app_name">Running Probe</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_settings">Settings</string>
 
-    <!-- Strings related to Settings -->
+    <!-- UI elements-->
+    <string name="start_run">Start løpetur!</string>
+    <string name="stop_run">Stopp løpetur</string>
+    <string name="finalize">Avslutt</string>
+    <string name="position">Posisjon: </string>
+    <string name="last_update">Sist oppdatert: </string>
+    <string name="file">Fil: </string>
+    <string name="low_intensity">lav intensitet</string>
+    <string name="medium_intensity">middels intensitet</string>
+    <string name="high_intensity">høy intensitet</string>
 
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <!-- questions-->
+    <string name="probe1">I hvilken grad tenkte du på noe annet enn løping?</string>
+    <string name="probe2">Var tankene dine intensjonelle eller spontane?</string>
+    <string name="probe3">Hvordan opplevde du den siste delen av turen?</string>
+    <string name="probe1_lower">ikke i det hele tatt</string>
+    <string name="probe1_upper">svært mye</string>
+    <string name="probe2_lower">intensjonelle</string>
+    <string name="probe2_upper">spontane</string>
+    <string name="probe3_lower">dårlig</string>
+    <string name="probe3_upper">bra</string>
+    <string name="title_activity_post_run_questionnaire">PostRunQuestionnaire</string>
+    <string name="postq_thanks">
+        Takk for at du bidro med dine data fra denne løpeturen!\n\n
+        Vi ønsker nå å spørre deg noen enkle spørsmål om løpeturen din.\n\n
+    </string>
+    <string name="q1_overall_quality">
+        Hvordan opplevde du turen i sin helhet?
+    </string>
+    <string name="q1_lower">dårlig</string>
+    <string name="q1_upper">bra</string>
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
+    <string name="q2_rain">Regnet det?</string>
+
+    <string-array name="q2_options">
+        <item>Nei</item>
+        <item>Litt</item>
+        <item>Veldig mye</item>
+    </string-array>
+
+    <string name="q3_problems">Hadde du problemer med utstyret?</string>
+    <string-array name="q3_options">
+        <item>Nei</item>
+        <item>Med pulsmåler/egen GPS</item>
+        <item>Med selve appen</item>
+    </string-array>
+
+    <string name="q4_location">Hvordan vil du beskrive omgivelsene du løp i?</string>
+    <string-array name="q4_options">
+        <item>Landlige</item>
+        <item>urbane</item>
+        <item>annet</item>
+    </string-array>
+
+    <string name="q5_noise">
+        Hvordan var støynivået fra omgivelsene under turen?
+    </string>
+    <string name="q5_lower">meget stille</string>
+    <string name="q5_upper">mye støy</string>
+
+    <string name="final_message_title">
+        Takk!
+    </string>
+    <string name="final_message">
+        Tusen takk for at du deltok i studien!\n
+        Du kan nå dele filen som ligger under %1$s med eksperimentlederen
+        (spør hvis dette innebærer tekniske problemer).\n
+        Håper du tar deg en tur til, snart!
     </string>
 
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
-
-    <string-array name="multi_select_list_preference_default_value" />
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
 </resources>
